Avances EDA y correción ETL

--- a/EDA.ipynb
+++ b/EDA.ipynb
@@ -52,7 +52,21 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "-------------------------"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Análisis"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Incendios por mes y año"
    ]
   },
   {
@@ -281,6 +295,13 @@
     "\n",
     "- Los meses con la menor cantidad de incendios son de marzo a junio.\n",
     "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Vamos a utilizar la función 'describe' para obtener el promedio, los valores máximos y mínimos del dataframe."
    ]
   },
   {
@@ -617,6 +638,13 @@
    "metadata": {},
    "source": [
     "<div style=\"border-bottom: 1px dashed white;\"></div>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Incendios por jurisdicción y año"
    ]
   },
   {
@@ -1296,6 +1324,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Focos de calor por año"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 38,
    "metadata": {},
@@ -1433,7 +1468,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Calcularemos la tasa de evolución de la cantidad de focos de incendios por año."
+    "Calcularemos la tasa de evolución de la cantidad de focos de incendios por año, con una función de nuestro modulo 'Funciones'."
    ]
   },
   {
@@ -1605,6 +1640,13 @@
    "metadata": {},
    "source": [
     "<div style=\"border-bottom: 1px dashed white;\"></div>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Focos de calor de cada jurisdicción por mes y año"
    ]
   },
   {
@@ -2936,6 +2978,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Incendios por región y año"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 50,
    "metadata": {},
@@ -3052,7 +3101,9 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "Vamos a utilizar la función 'describe' para obtener el promedio, los valores máximos y mínimos del dataframe."
+   ]
   },
   {
    "cell_type": "code",
@@ -3171,7 +3222,23 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "- Conclusiones del resultado de la función describe:\n",
+    "\n",
+    "    - El año 2022 registró la mayor cantidad de incendios, con un promedio de 757 incendios por región y un máximo de 1164 en el NOA. Sin embargo, el año 2022 presenta la mayor dispersión de los datos, lo que indica una gran variabilidad entre las regiones.\n",
+    "\n",
+    "    - En el año 2023, observamos la región (Norte) con la menor cantidad de incendios, totalizando 83 ocurrencias.\n",
+    "\n",
+    "    - La mitad de los incendios totales en todos los años no superan los 300 incidentes.\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Se elaborarán gráficos con el fin de visualizar la frecuencia de incendios por año, con el objetivo de realizar un análisis de los patrones de ocurrencia y sus posibles causas."
+   ]
   },
   {
    "cell_type": "code",
@@ -3193,6 +3260,7 @@
     "fig, axes = plt.subplots(2, 2, figsize=(26, 12))\n",
     "\n",
     "filtrado = quinto.iloc[1:,:]\n",
+    "\n",
     "sns.lineplot(data=filtrado,y='año_2020',x='región',ax=axes[0, 0])\n",
     "axes[0, 0].set_title('Año 2020')\n",
     "axes[0, 0].set_ylabel('Cantidad de incendios')\n",
