--- a/ETL.ipynb
+++ b/ETL.ipynb
@@ -232,6 +232,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Utilizaremos una función de nuestro modelo de 'Funciones' para revisar los tipos de datos de cada columna y detectar los valores nulos."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 4,
    "metadata": {},
@@ -609,6 +616,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Utilizaremos una función de nuestro modelo de 'Funciones' para revisar los tipos de datos de cada columna y detectar los valores nulos."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 6,
    "metadata": {},
@@ -709,6 +723,13 @@
    ],
    "source": [
     "F.analizar_datos(segundo)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Cambiamos los tipos de datos para poder manipular la información de manera correcta."
    ]
   },
   {
@@ -837,6 +858,13 @@
    ],
    "source": [
     "tercero"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Utilizaremos una función de nuestro modelo de 'Funciones' para revisar los tipos de datos de cada columna y detectar los valores nulos."
    ]
   },
   {
@@ -1206,6 +1234,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Utilizaremos una función de nuestro modelo de 'Funciones' para revisar los tipos de datos de cada columna y detectar los valores nulos."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 11,
    "metadata": {},
@@ -1409,6 +1444,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Cambiamos los tipos de datos para poder manipular la información de manera correcta."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 12,
    "metadata": {},
@@ -1437,7 +1479,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Verificamos cual es el problema al momento de cambiar el tipo de dato de la columna total"
+    "Verificamos cuál es el problema al momento de cambiar el tipo de dato de la columna 'total'."
    ]
   },
   {
@@ -1878,6 +1920,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Utilizaremos una función de nuestro modelo de 'Funciones' para revisar los tipos de datos de cada columna y detectar los valores nulos."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 16,
    "metadata": {},
@@ -1988,13 +2037,31 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Se realizaron modificaciones en dos dataframes, por lo que serán exportados nuevamente para poder trabajar con consistencia y calidad en la parte analítica."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
     "segundo.to_csv('Datasets/incendios_prov_2023_correcto.csv',index=False)\n",
     "cuarto.to_csv('Datasets/focos_calor_prov_2015_2023_correcto.csv',index=False)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- Conclusiones:\n",
+    "\n",
+    "    - En general, los datos estaban casi completos; aquellos que eran nulos se referían a CABA y indicaban que el valor es de 0 incendios, por lo que se imputaron con el valor 0.\n",
+    "\n",
+    "    - Se cambiaron los tipos de datos y algunas columnas que marcaban flotante eran debido a que tenían valores nulos, los cuales se imputaron con el valor 0."
    ]
   }
  ],
