Finalizacion EDA y ETL

--- a/ETL.ipynb
+++ b/ETL.ipynb
@@ -11,6 +11,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "En este notebook, se cargará la información y se revisarán los tipos de cada columna para determinar cuáles serán útiles. En el notebook también se verificará la presencia de registros duplicados y si algún registro en una columna tiene valores vacíos o nulos. Además de estas transformaciones, se importarán las bibliotecas que se utilizarán a lo largo del notebook para manipular los datos, incluido nuestro módulo personalizado llamado 'Funciones'. Finalmente, los datos procesados se exportarán y estarán listos para el análisis."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# Importamos las librerías necesarias"
    ]
   },
@@ -2062,6 +2069,13 @@
     "    - En general, los datos estaban casi completos; aquellos que eran nulos se referían a CABA y indicaban que el valor es de 0 incendios, por lo que se imputaron con el valor 0.\n",
     "\n",
     "    - Se cambiaron los tipos de datos y algunas columnas que marcaban flotante eran debido a que tenían valores nulos, los cuales se imputaron con el valor 0."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Finalizado este proceso de ETL, continuaremos con el Analisis Exploratorio de los datos para verlo haga click [aquí](EDA.ipynb)"
    ]
   }
  ],
